--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -10,6 +10,10 @@
       "sha1": "bb895d19b8a1fbe1c57fc89cac5da82fdc8fdef4"
     },
     {
+      "path": "src/assets/fonts/Montserrat-Semibold.ttf",
+      "sha1": "0754a3a23d8d68b0f0558df3109e0df86e968f24"
+    },
+    {
       "path": "src/assets/fonts/Proxima-Nova-Bold.otf",
       "sha1": "92bb573997e69556c792d3c4d4c0647737c11fd5"
     },
