Voice Input Integration, Login Otp API Integration, Checkout & Policy Page, Payment Gateway Demo

--- a/android/link-assets-manifest.json
+++ b/android/link-assets-manifest.json
@@ -18,6 +18,10 @@
       "sha1": "92bb573997e69556c792d3c4d4c0647737c11fd5"
     },
     {
+      "path": "src/assets/fonts/Proxima-Nova-Regular-Italic.otf",
+      "sha1": "fa5d12689c5173e3e1289e9a35a0efa717d16f96"
+    },
+    {
       "path": "src/assets/fonts/Proxima-Nova-Regular.ttf",
       "sha1": "7174dee37d9851739eb6e9f24152a91e1024c9bd"
     },
