--- a/ios/customer_app/Info.plist
+++ b/ios/customer_app/Info.plist
@@ -55,6 +55,7 @@
 		<string>Proxima-Nova-Regular.ttf</string>
 		<string>Montserrat-Regular.ttf</string>
 		<string>Montserrat-Semibold.ttf</string>
+		<string>Proxima-Nova-Regular-Italic.otf</string>
 	</array>
 </dict>
 </plist>
