--- a/package.json
+++ b/package.json
@@ -10,21 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-voice/voice": "^3.2.4",
+    "@react-native-community/voice": "^1.1.9",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "formik": "^2.4.6",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-get-location": "^5.0.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-otp-entry": "^1.7.1",
     "react-native-otp-verify": "^1.1.8",
+    "react-native-razorpay": "^2.3.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-sms-retriever": "^1.1.1",
+    "react-native-uuid": "^2.0.2",
+    "react-redux": "^9.1.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
