--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/voice": "^1.1.9",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -19,9 +20,12 @@
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-device-info": "^13.0.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-get-location": "^5.0.0",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.18.0",
+    "react-native-onesignal": "^5.2.4",
     "react-native-otp-entry": "^1.7.1",
     "react-native-otp-verify": "^1.1.8",
     "react-native-razorpay": "^2.3.0",
