--- a/ios/customer_app/Info.plist
+++ b/ios/customer_app/Info.plist
@@ -57,5 +57,13 @@
 		<string>Montserrat-Semibold.ttf</string>
 		<string>Proxima-Nova-Regular-Italic.otf</string>
 	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+    <string>ppemerchantsdkv1</string>
+    <string>ppemerchantsdkv2</string>
+    <string>ppemerchantsdkv3</string>
+    <string>paytmmp</string>
+    <string>gpay</string>
+	</array>
 </dict>
 </plist>
