--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-base64": "^0.2.1",
     "react-native-device-info": "^13.0.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-get-location": "^5.0.0",
@@ -28,12 +29,14 @@
     "react-native-onesignal": "^5.2.4",
     "react-native-otp-entry": "^1.7.1",
     "react-native-otp-verify": "^1.1.8",
+    "react-native-phonepe-pg": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-mobile-react-native-sdk/releases/v2/react-native-phonepe-pg.tgz",
     "react-native-razorpay": "^2.3.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-sms-retriever": "^1.1.1",
     "react-native-uuid": "^2.0.2",
     "react-redux": "^9.1.2",
+    "sha256": "^0.2.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
